# Multi-Source-Knowledge-Base-Graph

./: .gitignore  .pre-commit-config.yaml  DOCKER.md  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init_documents_and_ingestion_status.py  0002_add_chunks_table.py  0003_add_topics_to_chunks.py
apps/api/: Dockerfile  entrypoint.sh
apps/api/kg_rag_api/: auth.py  db.py  main.py
apps/api/kg_rag_api/agent/: agent.py
apps/api/kg_rag_api/routes/: admin_api.py  agent.py  answer.py  docs.py  generate.py  health.py  roadmap.py  search.py  ui.py
apps/workers/: Dockerfile
apps/workers/kg_rag_workers/: __init__.py  tasks.py  worker.py
apps/workers/kg_rag_workers/tasks/: __init__.py  classify.py  embed.py  graph.py  ingest.py
docs/: Oauth-Client-integration-plan.txt  README.md  authentication-flow.md  frontend-auth-setup.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  WALKTHROUGH.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AuthSync.tsx  ProtectedRoute.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/pages/: AdminPage.tsx  CallbackPage.tsx  DocumentLibraryPage.tsx  DocumentsPage.tsx  HomePage.tsx  QAPage.tsx  RoadmapPage.tsx  SearchPage.tsx
frontend/src/services/: admin.ts  api.ts  documents.ts  qa.ts  search.ts
frontend/src/types/: api.ts
infra/: .env.example  docker-compose.yml
libs/common/kg_rag_common/: __init__.py  bulk_uploader.py  classify.py  dto.py  embeddings.py  graph.py  models.py  observability.py  qdrant_util.py  reranker.py  retriever.py  settings.py  text_extraction.py
scripts/: register-uaa-client.sh
tests/: test_agent.py  test_classify.py  test_embed_prepare.py  test_generate_questions.py  test_graph_build.py  test_health.py  test_pdf_extraction.py  test_roadmap.py
ui/: Dockerfile  app.js  index.html  nginx.conf
