[tool.poetry]
name = "kg-rag"
version = "0.1.0"
description = "Mono-repo for Knowledge Graph RAG: FastAPI, Celery, shared libs, and infra"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "kg_rag_api", from = "apps/api" },
  { include = "kg_rag_workers", from = "apps/workers" },
  { include = "kg_rag_common", from = "libs/common" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic-settings = "^2.3.0"
celery = "^5.3.6"
redis = "^5.0.1"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
psycopg = {version = "^3.2.3", extras = ["binary"]}
boto3 = "^1.35.57"
python-multipart = "^0.0.9"
pymupdf = "^1.24.11"
qdrant-client = "^1.11.3"
numpy = "^2.1.3"
neo4j = "^5.27.0"
structlog = "^24.4.0"
prometheus-client = "^0.21.0"
opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"
opentelemetry-exporter-otlp = "^1.27.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-instrumentation-sqlalchemy = "^0.48b0"
opentelemetry-instrumentation-redis = "^0.48b0"
opentelemetry-instrumentation-requests = "^0.48b0"
requests = "^2.32.3"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.8"
mypy = "^1.11.2"
pre-commit = "^3.8.0"
types-redis = "^4.6.0.20240819"
types-requests = "^2.32.0.20241016"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "B",  # flake8-bugbear
  "I",  # isort
]
ignore = []

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
pretty = true

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
